# sqbot-rs

./: Cargo.toml
src/: commands.rs  guild.rs  lib.rs  main.rs
