[package]
name = "serenity-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
poise = "0.3.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "serenity-voice-model"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"]}
